Handle spaces in input strings in Tabix and SeekableStreamFactory.